<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.enes.lolquizdbmanager.MainActivity"
    tools:layout_editor_absoluteY="25dp">


    <TextView
        android:id="@+id/textKullanici"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/kullaniciAdi"
        android:textSize="@dimen/fontOrta"
        app:layout_constraintBottom_toBottomOf="@id/inputId"
        app:layout_constraintEnd_toStartOf="@id/inputId"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/boslukKucuk"
        android:layout_marginTop="8dp"
        android:ems="8"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/imageView"
        tools:ignore="LabelFor" />

    <TextView
        android:id="@+id/textSifre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:text="@string/sifre"
        android:textSize="@dimen/fontOrta"
        app:layout_constraintBottom_toBottomOf="@id/inputSifre"
        app:layout_constraintEnd_toStartOf="@id/inputSifre"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/inputSifre"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/boslukKucuk"
        android:layout_marginTop="8dp"
        android:ems="8"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputId" />

    <Button
        android:id="@+id/butonGiris"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/giris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputSifre" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@mipmap/lolquizdbmanager"
        android:contentDescription="@string/app_name"/>
</android.support.constraint.ConstraintLayout>


