<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SampEkle">

    <TextView
        android:id="@+id/textSampAdi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginStart="@dimen/boslukKucuk"
        android:text="@string/textSampAdi"
        android:textSize="@dimen/fontOrta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/inputSampAdi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="24dp"
        android:ems="6"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textSampSinifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/boslukKucuk"
        android:layout_marginTop="100dp"
        android:text="@string/textSampSinifi"
        android:textSize="@dimen/fontOrta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSampAdi" />

    <Spinner
        android:id="@+id/inputSampSinifi"
        android:layout_width="wrap_content"
        android:layout_height="34dp"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="92dp"
        android:textAlignment="center"
        android:minWidth="130dp"
        android:ems="6"
        android:inputType="number"
        app:layout_constraintBottom_toBottomOf="@+id/textSampSinifi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputSampAdi" />

    <TextView
        android:id="@+id/textSampImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/boslukKucuk"
        android:layout_marginTop="100dp"
        android:text="@string/textSampImg"
        android:textSize="@dimen/fontOrta"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textSampSinifi" />

    <EditText
        android:id="@+id/inputSampImg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="32dp"
        android:layout_marginTop="76dp"
        android:ems="6"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/inputSampSinifi" />

    <Button
        android:id="@+id/butonEkle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/textEkle"
        android:textSize="@dimen/fontOrta"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/inputSampImg" />

</android.support.constraint.ConstraintLayout>